Updating the configs